Add heading one

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-  <main>
-    <div>
+  <main class="pad-t-2 pad-b-2 gutter-1-2">
+    <div class="wrapper">
       <h1>Exoplanets</h1>
 
       NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.
