--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div class="wrapper">
       <h1>Exoplanets</h1>
 
-      NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.
+      <div class="table-wrapper scrollable">
+        <table class="push-0">
+          <caption class="mega">NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
 
       Name
       Orbiting star
