Add table heading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         <table class="push-0">
           <caption class="mega">NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
 
+          <thead>
+            <tr>
+              <th class="name" scope="col">Name</th>
+              <th class="star" scope="col">Orbiting star</th>
+              <th class="year" scope="col">Year of discovery</th>
+              <th class="disance" scope="col">Distance</th>
+              <th class="notes" scope="col">Notes</th>
+            </tr>
+          </thead>
+
       Name
       Orbiting star
       Year of discovery
