--- a/index.html
+++ b/index.html
@@ -27,45 +27,14 @@
               <th class="notes" scope="col">Notes</th>
             </tr>
           </thead>
-
-      Name
-      Orbiting star
-      Year of discovery
-      Distance
-      Notes
-
-      PSR B1257+12 A
-      Lich pulsar
-      1992
-      2300 ly
-      First confirmed exoplanet
-
-      Dimidium
-      51 Pegasi
-      1995
-      50 ly
-      First confirmed exoplanet orbiting a main-sequence star
-
-      Osiris
-      HD 209458
-      2001
-      150 ly
-      First exoplanet with a confirmed atmosphere
-
-      The Genesis planet
-      PSR B1620-26 & WD B1620-26
-      2003
-      12 400 ly
-      One of the oldest exoplanets yet discovered — ~12.7 B years old
-
-      Kepler-438b
-      Kepler-438
-      2015
-      470 ly
-      1000th exoplanet discovered
-
-      Total
-      5
+          <tbody>
+            <tr>
+              <th class="not-bold italic" scope="row">PSR B1257+12 A</th>
+              <td>Lich pulsar</td>
+              <td>1992</td>
+              <td>2300 ly</td>
+              <td>First confirmed exoplanet</td>
+            </tr>
 
     </div>
   </main>
