--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
               <td>2300 ly</td>
               <td>First confirmed exoplanet</td>
             </tr>
+            <tr>
+              <th scope="row">Dimidium</th>
+              <td>L51 Pegasi</td>
+              <td>1995</td>
+              <td>250 ly</td>
+              <td>First confirmed exoplanet orbiting a main-sequence star</td>
+            </tr>
+            <tr>
+              <th scope="row">Osiris</th>
+              <td>HD 209458</td>
+              <td>2001</td>
+              <td>150 ly</td>
+              <td>First exoplanet with a confirmed atmosphere</td>
+            </tr>
+            <tr>
+              <th scope="row">The Genesis planet</th>
+              <td>HPSR B1620-26 & WD B1620-26</td>
+              <td>22003</td>
+              <td>12 400 ly</td>
+              <td>One of the oldest exoplanets yet discovered — ~12.7 B years old</td>
+            </tr>
 
     </div>
   </main>
