Add table footer

--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
               <td>12 400 ly</td>
               <td>One of the oldest exoplanets yet discovered — ~12.7 B years old</td>
             </tr>
+            <tr>
+              <th scope="row">Kepler-438b</th>
+              <td>Kepler-438</td>
+              <td>2015</td>
+              <td>470 ly</td>
+              <td>1000th exoplanet discovered</td>
+            </tr>
+          </tbody>
+          <tfoot class="bold">
+            <tr>
+              <th scope="row">Total</th>
+              <td colspan="4">5</td>
+            </tr>
+          </tfoot>
 
     </div>
   </main>
