--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
               <td colspan="4">5</td>
             </tr>
           </tfoot>
+        </table>
+      </div>
 
     </div>
   </main>
